--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  tests:
     name: "Tests"
     runs-on: ubuntu-latest
 
@@ -18,7 +18,6 @@ jobs:
           MYSQL_USER: user
           MYSQL_PASSWORD: secret
           MYSQL_DATABASE: test
-          MYSQL_ROOT_PASSWORD: secretroot
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -32,6 +31,7 @@ jobs:
           with:
             coverage: "none"
             php-version: "8.1"
+            extensions: pdo, sqlite
             ini-file: development
             tools: composer:v2
 
@@ -46,7 +46,7 @@ jobs:
             DB_DATABASE: test
             DB_USERNAME: user
             DB_PASSWORD: secret
-            DB_PORT: 3306
+            DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
   static_analysis:
     name: Static analysis
