--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
   workflow_dispatch:
 
@@ -18,6 +18,7 @@ jobs:
           MYSQL_USER: user
           MYSQL_PASSWORD: secret
           MYSQL_DATABASE: test
+          MYSQL_ROOT_PASSWORD: secretroot
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
