--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Supun Kavinda",
+            "name": "Supun Wimalasena",
             "email": "supun@hyvor.com"
         }
     ],
@@ -16,13 +16,13 @@
         }
     },
     "require": {
-        "php": "^8.1"
+        "php": "^8.3|^8.2"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0",
-        "phpunit/phpunit": "^9.5",
-        "pestphp/pest": "^1.21",
-        "phpstan/phpstan": "^1.8.10"
+        "orchestra/testbench": "^9.0",
+        "phpunit/phpunit": "^10",
+        "pestphp/pest": "^2",
+        "phpstan/phpstan": "^1.10"
     },
     "config": {
         "allow-plugins": {
