--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "php": "^8.3|^8.2"
+        "php": "^8.3|^8.2|^8.1|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0",
