--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,10 @@ jobs:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+    strategy:
+      matrix:
+        php: [ '8.2', '8.3' ]
+
     steps:
       -   name: Checkout
           uses: actions/checkout@v2
@@ -31,7 +35,7 @@ jobs:
           uses: shivammathur/setup-php@v2
           with:
             coverage: "none"
-            php-version: "8.1"
+            php-version: ${{ matrix.php }}
             extensions: pdo, sqlite
             ini-file: development
             tools: composer:v2
@@ -61,7 +65,7 @@ jobs:
           uses: shivammathur/setup-php@v2
           with:
             coverage: "none"
-            php-version: "8.1"
+            php-version: "8.3"
             ini-file: development
 
       -   name: Install dependencies
