--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "php": "^8.3|^8.2|^8.1|^8.0"
+        "php": "^8.3|^8.2"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0",
@@ -27,6 +27,13 @@
     "config": {
         "allow-plugins": {
             "pestphp/pest-plugin": true
+        }
+    },
+    "extra": {
+        "phpstan": {
+            "includes": [
+                "extension.neon"
+            ]
         }
     }
 }
