--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
             "pestphp/pest-plugin": true
         }
     },
+    "scripts": {
+        "phpstan": "vendor/bin/phpstan -c phpstan.neon"
+    },
     "extra": {
         "phpstan": {
             "includes": [
